<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper12"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleShadow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:text="@string/app_name_title"
        android:textColor="#005098"
        android:textSize="30pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/app_name_title"
        android:textColor="#dadada"
        android:textSize="30pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonSingle"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/shapebutton"
            android:drawableRight="@drawable/next"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/newGameSingle"
            android:textSize="8pt" />
        <Button
            android:id="@+id/buttonArcade"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shapebutton"
            android:drawableRight="@drawable/next"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/newGameArcade"
            android:textSize="8pt" />

        <Button
            android:id="@+id/buttonHighscore"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shapebutton"
            android:drawableRight="@drawable/next"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/highscore"
            android:textSize="8pt" />

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shapebutton"
            android:drawableRight="@drawable/next"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/help"
            android:textSize="8pt" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shapebutton"
            android:drawableRight="@drawable/next"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/authors"
            android:textSize="8pt" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shapebutton"
            android:drawableRight="@drawable/next"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/exit"
            android:textSize="8pt" />
    </LinearLayout>

</RelativeLayout>